[package]
name = "grammar"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "log2"
path = "src/nginx_log.rs"

[[bin]]
name = "json"
path = "src/json.rs"

[[bin]]
name = "json2"
path = "src/json2.rs"

[dependencies]
anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["serde"] }
pest = "2.8.0"
pest_derive = "2.8.0"
regex = "1.11.1"
rhai = { version = "1.21.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
winnow = { version = "0.7.6", features = ["simd"] }
